sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:20: error: illegal start of simple expression
}while()
       ^AlgBubbleSort1:24: error: ')' expected but '}' found.
}
^